--- a/index.html
+++ b/index.html
@@ -12,7 +12,28 @@
 </head>
 
 <body>
+    <div class="container">
+        <div id="quiz">
+            <h1 class="main-header">Are you a true star wars nerd?</h1>
+            <hr>
+            <p id="question"></p>
 
+            <div class="buttons">
+                <button id="btn0"><span id="choice0"></span>
+                </button>
+
+                <button id="btn1"><span id="choice1"></span>
+                </button>
+
+                <button id="btn2"><span id="choice2"></span>
+                </button>
+
+                <button id="btn3"><span id="choice3"></span>
+                </button>
+
+            </div>
+        </div>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 
