--- a/index.html
+++ b/index.html
@@ -36,10 +36,15 @@
 
                 <button id="btn3"><span id="choice3"></span>
                 </button>
-
             </div>
         </div>
     </div>
+    
+    <div class="score-area"> 
+        <p class="scores">Correct Answers <span id="score">0</span></p>
+        <p class="scores">Incorrect Answers<span id="incorrect">0</span></p>
+    </div>
+
     <script src="assets/js/script.js"></script>
 </body>
 
