--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-      <!--font awesome and google fonts-->
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-      <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
+    <!--font awesome and google fonts-->
+    <!--image is from https://fabrikbrands.com/star-wars-logo-history-star-wars-symbols/-->
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Poller+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title> Document</title>
@@ -18,8 +21,8 @@
 <body>
     <div class="container">
         <div id="quiz">
-            <h1 class="main-header">Are you a true star wars nerd?</h1>
-                <img class="logo" src="assets/images/logo.png" alt="logo">
+            <h1 class="main-header">Are you a true STAR WARS nerd?</h1>
+            <img class="logo" src="assets/images/logo.png" alt="logo">
             </h1>
             <hr>
             <p id="question"></p>
