--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--font awesome and google fonts-->
-    <!--image is from https://fabrikbrands.com/star-wars-logo-history-star-wars-symbols/-->
+    <!--image is from https://www.ign.com/articles/star-wars-movies-tv-shows-chronological-order/-->
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Poller+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poller+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title> Document</title>
@@ -22,11 +22,27 @@
     <div class="container">
         <div id="quiz">
             <h1 class="main-header">Are you a true STAR WARS nerd?</h1>
-            <img class="logo" src="assets/images/logo.png" alt="logo">
+            <img class="logo" src="assets/images/starwarssaga-blogroll-1653501853399.jpg" alt="logo">
             </h1>
             <hr>
-            <p id="question"></p>
-
+            <ul>
+                <li>
+                    <input type="radio" name="answer" id="a" class="answer">
+                    <label for="a" id="a_text">Possible answer</label>
+                </li>
+                <li>
+                    <input type="radio" name="answer" id="b" class="answer">
+                    <label for="b" id="b_text">Possible answer</label>
+                </li>
+                <li>
+                    <input type="radio" name="answer" id="c" class="answer">
+                    <label for="c" id="c_text">Possible answer</label>
+                </li>
+                <li>
+                    <input type="radio" name="answer" id="d" class="answer">
+                    <label for="d" id="d_text">Possible answer</label>
+                </li>
+            </ul>
             <div class="buttons">
                 <button id="btn0"><span id="choice0"></span>
                 </button>
