--- a/index.html
+++ b/index.html
@@ -43,26 +43,11 @@
                     <label for="d" id="d_text">Possible answer</label>
                 </li>
             </ul>
-            <div class="buttons">
-                <button id="btn0"><span id="choice0"></span>
-                </button>
-
-                <button id="btn1"><span id="choice1"></span>
-                </button>
-
-                <button id="btn2"><span id="choice2"></span>
-                </button>
-
-                <button id="btn3"><span id="choice3"></span>
-                </button>
-            </div>
         </div>
     </div>
 
-    <div class="score-area"> <i class="fas fa-crown"></i>
-        <p class="scores">Correct Answers <span id="score">0</span></p>
-        <p class="scores">Incorrect Answers<span id="incorrect">0</span></p>
-    </div>
+    <button id="submit">Try Your Luck</button>
+    <a href="highscores.html" class="score-area">High Scores <i class="fas fa-crown"></i></a>
 
     <script src="assets/js/script.js"></script>
 </body>
