change lists background to blue

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title> Document</title>
 
 </head>
-
+<!--Main page with quiz-->
 <body>
     <div class="container">
         <div id="quiz">
@@ -25,26 +25,37 @@
             <img class="logo" src="assets/images/starwarssaga-blogroll-1653501853399.jpg" alt="logo">
             </h1>
             <hr>
+            <h2 id="question">These are the Questions</h2>
             <ul>
                 <li>
+                    <div class="option">
                     <input type="radio" name="answer" id="a" class="answer">
                     <label for="a" id="a_text">Possible answer</label>
+                    </div>
                 </li>
                 <li>
+                    <div class="option">
                     <input type="radio" name="answer" id="b" class="answer">
                     <label for="b" id="b_text">Possible answer</label>
+                    </div> 
                 </li>
                 <li>
+                    <div class="option">
                     <input type="radio" name="answer" id="c" class="answer">
                     <label for="c" id="c_text">Possible answer</label>
+                    </div>
                 </li>
                 <li>
+                    <div class="option">
                     <input type="radio" name="answer" id="d" class="answer">
                     <label for="d" id="d_text">Possible answer</label>
+                    </div>
                 </li>
             </ul>
         </div>
+        </div>
     </div>
+<!--section with the questions -->
 
     <button id="submit">Try Your Luck</button>
     <a href="highscores.html" class="score-area">High Scores <i class="fas fa-crown"></i></a>
