fix bugs and adjust style

--- a/index.html
+++ b/index.html
@@ -57,10 +57,14 @@
     </div>
 <!--section with the questions -->
 
-    <button id="submit">Try Your Luck</button>
-    <a href="highscores.html" class="score-area">High Scores <i class="fas fa-crown"></i></a>
+<button id="submit">Try Your Luck</button>
+<a href="highscores.html" class="score-area">High Scores <i class="fas fa-crown"></i></a>
+<script src="assets/js/highscores.js"></script>
+    <a href="/index.html"></a>
 
-    <script src="assets/js/script.js"></script>
+
+<script src="assets/js/script.js"></script>
+
 </body>
 
 </html>
