--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="container">
         <div id="quiz">
-            <h1 class="main-header">Are you a true STAR WARS nerd?</h1>
+            <h1 class="main-header">Are you a true <br> STAR WARS nerd?</h1>
             <img class="logo" src="assets/images/starwarssaga-blogroll-1653501853399.jpg" alt="logo">
             </h1>
             <hr>
@@ -57,7 +57,7 @@
     </div>
 <!--section with the questions -->
 
-<button id="submit">Try Your Luck</button>
+<button id="submit">Click here to check!</button>
 <a href="highscores.html" class="score-area">High Scores <i class="fas fa-crown"></i></a>
 <script src="assets/js/highscores.js"></script>
     <a href="/index.html"></a>
