add copyright part

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title> Document</title>
 
 </head>
+
 <!--Main page with quiz-->
 
 <body>
@@ -60,6 +61,8 @@
 
     <button id="submit">Click here to check!</button>
 
+    <!--high scores section-->
+
     <a href="highscores.html" class="score-area">High Scores <i class="fas fa-crown"></i></a>
     <script src="assets/js/highscores.js"></script>
     <a href="/index.html"></a>
@@ -68,5 +71,6 @@
     <script src="assets/js/script.js"></script>
 
 </body>
+<p class="copyright">Developed by Anka Maric 2022</p>
 
 </html>
