--- a/highscores.html
+++ b/highscores.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
- <!--font awesome and google fonts-->
+    <!--font awesome and google fonts-->
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-<div class="container">
+    <div class="container">
 
-        <!--Leaderboard with results-->
+        <!--Leaderboard-->
 
         <div id="highScores">
             <h1 id="finalScore">Leaderboard</h1>
