add footer to html

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
     <script src="assets/js/script.js"></script>
 
 </body>
-<p class="copyright">Developed by Anka Maric 2022</p>
+<footer>
+    <p class="copyright">Developed by Anka Maric 2022</p>
+</footer>
+
 
 </html>
