style adjust on main header

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
     <!--section with the questions -->
 
-    <button id="submit">Click here to check!</button>
+    <button id="submit">Click here for next question!</button>
 
     <!--high scores section-->
 
