fix html bugs flagged by validator

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!--font awesome and google fonts-->
     <!--image is from https://www.ign.com/articles/star-wars-movies-tv-shows-chronological-order/-->
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poller+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -25,7 +26,6 @@
         <div id="quiz">
             <h1 class="main-header">Are you a true <br> STAR WARS nerd?</h1>
             <img class="logo" src="assets/images/starwarssaga-blogroll-1653501853399.jpg" alt="logo">
-            </h1>
             <hr>
             <h2 id="question">These are the Questions</h2>
             <ul>
@@ -56,7 +56,7 @@
             </ul>
         </div>
     </div>
-    </div>
+
     <!--section with the questions -->
 
     <button id="submit">Click here for next question!</button>
@@ -70,10 +70,8 @@
 
     <script src="assets/js/script.js"></script>
 
-</body>
-<footer>
-    <p class="copyright">Developed by Anka Maric 2022</p>
-</footer>
 
+    <p class="copyright">Developed by Anka Maric 2022</p>
+</body>
 
 </html>
