--- a/highscores.html
+++ b/highscores.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <script src="assets/js/highscores.js"></script>
-    <a href="index.html">Quiz</a>
+    <a href="index.html"></a>
 </body>
 
 </html>
